style(Dashboard): prevent overflow in widgets; remove selections on preview

--- a/packages/dashboard/src/customization/widgets/text/styledText/index.css
+++ b/packages/dashboard/src/customization/widgets/text/styledText/index.css
@@ -8,6 +8,7 @@
   border: none;
   resize: none;
   box-sizing: border-box;
+  overflow-wrap: break-word;
 }
 
 .text-widget-bold {
